shoppingcart/shoppingportal-k8/shoppingportal-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: shoppingportalms-deploy
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      name: shoppingportalms
      zone: prod
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: shoppingportalms
        version: v1
        release: stable
        tier: be
        zone: prod
        managed-by: m2
    spec:
      containers:
        - name: shoppingportalms-ctr
          image: metamagicglobal/shoppingportalservice_k8
          imagePullPolicy: Always
          ports:
          - containerPort: 8082
