shoppingcart/shoppingportal-k8/shoppingportal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shoppingportal-svc
  namespace: shoppingportal
spec:
  type: LoadBalancer
  selector: 
    name: shoppingportalms
  ports:
  - protocol: TCP
    targetPort: 8082
    port: 80
    name: http
