shoppingcart/shoppingportal-k8/shoppingportal-destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shoppingportal-destination-rules
  namespace: shoppingportal    
spec:
  host: shoppingportal-svc.shoppingportal.svc.cluster.local
  subsets:
  - name: stable
    labels:
      version: v1
