shoppingcart/shoppingportal-k8/shoppingportal-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shoppingportal-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /shoppingcartms
    route:
    - destination:
        host: shoppingportal-svc.shoppingportal.svc.cluster.local
        port:
          number: 80
